Add cache for CodePoolGenerator